Updated file structure

--- a/Exercise2/MichaelMai/libprojectx/CMakeLists.txt
+++ b/Exercise2/MichaelMai/libprojectx/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(libprojectx example.cpp)
+add_library(libprojectx example.cpp example.h Rover.h)
 
 target_include_directories(libprojectx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
