--- a/libElevator/CMakeLists.txt
+++ b/libElevator/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(libElevator elevator.cpp)
+add_library(libElevator elevator.h elevator.cpp)
 
 target_include_directories(libElevator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
