--- a/Exercise3/AlexMarc_NoRust/ElevatorSimulator/ElevatorSimulator/ElevatorSimulator.csproj
+++ b/Exercise3/AlexMarc_NoRust/ElevatorSimulator/ElevatorSimulator/ElevatorSimulator.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direction.cs" />
     <Compile Include="Elevator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
